fix(web): style with dark mode

--- a/apps/web/src/app/pages/resources/resources.page.scss
+++ b/apps/web/src/app/pages/resources/resources.page.scss
@@ -7,6 +7,7 @@ h1 {
   width: 100%;
   text-align: center;
   margin-top: 2rem;
+  color: var(--brand-text-primary);
 }
 
 h2 {
