--- a/shared/styles/material/base.scss
+++ b/shared/styles/material/base.scss
@@ -82,7 +82,7 @@ $mat-light-theme-background: (
 
 // FOREGROUND DARK
 
-$light-text: #adbac7;
+$light-text: #f2f2f2;
 $light-primary-text: $light-text;
 $light-accent-text: rgba($light-primary-text, 0.7);
 $light-disabled-text: rgba($light-primary-text, 0.5);
